sugardir = $(pkgdatadir)/shell/journal
sugar_PYTHON =				\
	__init__.py			\
	collapsedentry.py		\
	detailview.py			\
	expandedentry.py		\
	journalactivity.py		\
	journalentrybundle.py		\
	journaltoolbox.py		\
	keepicon.py			\
	listview.py			\
	misc.py				\
	modalalert.py			\
	objectchooser.py		\
	palettes.py			\
	query.py			\
	volumesmanager.py		\
	volumestoolbar.py
