sugardir = $(pythondir)/sugar/graphics
sugar_PYTHON =			\
	__init__.py		\
	animator.py		\
	icon.py			\
	iconbutton.py          	\
	canvasbutton.py		\
	canvasicon.py		\
	canvasentry.py		\
	color.py		\
	combobox.py		\
	frame.py		\
	notebook.py		\
	menuitem.py		\
	objectchooser.py	\
	radiotoolbutton.py	\
	roundbox.py		\
	palette.py		\
	palettegroup.py		\
	panel.py		\
	spreadlayout.py		\
	style.py		\
	toggletoolbutton.py	\
	toolbox.py		\
	toolbutton.py		\
	toolcombobox.py		\
	units.py		\
	window.py		\
	xocolor.py
