sugardir = $(pythondir)/sugar/graphics
sugar_PYTHON =			\
	__init__.py		\
	animator.py		\
	canvasbutton.py		\
	canvasicon.py		\
	canvasentry.py		\
	canvasroundbox.py	\
	combobox.py		\
	icon.py			\
	iconbutton.py          	\
	iconentry.py          	\
	notebook.py		\
	objectchooser.py	\
	radiotoolbutton.py	\
	palette.py		\
	palettegroup.py		\
	panel.py		\
	spreadlayout.py		\
	style.py		\
	toggletoolbutton.py	\
	toolbox.py		\
	toolbutton.py		\
	toolcombobox.py		\
	window.py		\
	xocolor.py
