sugardir = $(pythondir)/sugar/graphics
sugar_PYTHON =			\
	__init__.py		\
	animator.py		\
	button.py		\
	combobox.py		\
	entry.py		\
	icon.py			\
	iconbutton.py          	\
	iconentry.py          	\
	menuitem.py		\
	notebook.py		\
	objectchooser.py	\
	radiotoolbutton.py	\
	palette.py		\
	palettegroup.py		\
	panel.py		\
	roundbox.py		\
	spreadlayout.py		\
	style.py		\
	toggletoolbutton.py	\
	toolbox.py		\
	toolbutton.py		\
	toolcombobox.py		\
	tray.py			\
	window.py		\
	xocolor.py
